# pyxscat

./: .gitignore  README.md  Untitled.ipynb  ddd  edf.ipynb  gui.py  profile_results.txt  profile_results_10h46m30s_26-10-2023.txt  profile_results_10h47m47s_26-10-2023.txt  profile_stats  pyproject.toml  qz.ipynb  requirements.txt  setup.py
jupyter_notebooks/: edf.ipynb  pyFAI.ipynb  pygix.ipynb  qz.ipynb
logger/: pyxscat_h5_logger_09h33m25s_11-09-2023.txt  pyxscat_h5_logger_09h37m51s_08-09-2023.txt  pyxscat_h5_logger_09h40m47s_11-09-2023.txt  pyxscat_h5_logger_09h41m13s_11-09-2023.txt  pyxscat_h5_logger_09h41m48s_11-09-2023.txt  pyxscat_h5_logger_09h41m54s_08-09-2023.txt  pyxscat_h5_logger_09h44m56s_13-09-2023.txt  pyxscat_h5_logger_09h45m31s_13-09-2023.txt  pyxscat_h5_logger_09h45m42s_11-09-2023.txt  pyxscat_h5_logger_09h46m20s_11-09-2023.txt  pyxscat_h5_logger_09h47m16s_13-09-2023.txt  pyxscat_h5_logger_09h48m48s_13-09-2023.txt  pyxscat_h5_logger_09h49m31s_11-09-2023.txt  pyxscat_h5_logger_09h50m35s_11-09-2023.txt  pyxscat_h5_logger_09h51m16s_11-09-2023.txt  pyxscat_h5_logger_09h53m38s_11-09-2023.txt  pyxscat_h5_logger_09h55m10s_06-09-2023.txt  pyxscat_h5_logger_09h56m04s_04-09-2023.txt  pyxscat_h5_logger_09h57m24s_23-08-2023.txt  pyxscat_h5_logger_09h58m13s_11-07-2023.txt  pyxscat_h5_logger_09h58m15s_21-08-2023.txt  pyxscat_h5_logger_09h58m16s_11-09-2023.txt  pyxscat_h5_logger_09h59m21s_04-09-2023.txt  pyxscat_h5_logger_10h02m08s_11-07-2023.txt  pyxscat_h5_logger_10h03m19s_11-07-2023.txt  pyxscat_h5_logger_10h07m26s_11-07-2023.txt  (+776 more)
pyxscat.egg-info/: PKG-INFO  (+4 more)
(+263 files in other folders)
