[project]
name = "pyxscat"
version = "0.10"
authors = [
    {name = "Edgar", email = "edgar.gutierrez-fernandez@esrf.fr"},
]
readme = "README.md"

dependencies = [
    "numpy",
    "matplotlib",
    "pygix",
    "pyFAI",
    "PyQt5",
    "pandas",
    "h5py",
]

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
pyxscat = "pyxscat.gui.run:main"
pyxscat-browser = "pyxscat.gui.browser:main"
pyxscat-screen = "pyxscat.gui.screen:main"
pyxscat-terminal = "pyxscat.gui.terminal:main"
pyxscat-gui = "pyxscat.gui.gui:main"
pyxscat-run = "pyxscat.gui.gui_run:main"